--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   url_launcher: ^5.7.10
   numberpicker: ^1.3.0
   web_socket_channel: ^1.1.0
+  kiwi: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
